# src/controllers/gameController.js
@@ -7,9 +7,7 @@ gameController.getAllGames = async (req, res) => {
     #swagger.summary = "Get all games"
     #swagger.description = "Returns all games in the database"
     #swagger.tags = ['Games']
-        #swagger.security = [{
-        "OAuth2": ["read"]
-  }]
+    #swagger.security = [ {"OAuth2": ["read"]}]
     */
     try {
         const games = await Game.find();
@@ -25,7 +23,7 @@ gameController.getGame = async (req, res) => {
     #swagger.summary = "Get a game by ID"
     #swagger.description = "Returns a game by its ID"
     #swagger.tags = ['Games']
-
+    #swagger.security = [ {"OAuth2": ["read"]}]
     */
     try {
         const gameId = req.params.id;
@@ -41,6 +39,12 @@ gameController.getGame = async (req, res) => {
 };
 // Add a new game
 gameController.addGame = async (req, res) => {
+    /*
+    #swagger.summary = "Add a new game"
+    #swagger.description = "Adds a game"
+    #swagger.tags = ['Games']
+    #swagger.security = [ {"OAuth2": ["write"]}]
+    */
     try {
         const { gameTitle, consoles, developer, publisher, genre, shortSummary, rating, releaseDate, recommended } = req.body;
 
@@ -80,14 +84,12 @@ gameController.addGame = async (req, res) => {
 };
 
 // Controller to update a game
-gameController.addOrUpdateGame = async (req, res) => {
+gameController.UpdateGame = async (req, res) => {
         /*
     #swagger.summary = "Add or Update a Game"
     #swagger.description = "Endpoint to add or update a game in the database."
     #swagger.tags = ['Games']
-        #swagger.security = [{
-        "OAuth2": ["write"]
-    }]
+    #swagger.security = [ {"OAuth2": ["write"]}]
     */
     try {
         const { gameTitle, consoles, developer, publisher, genre, shortSummary, rating, releaseDate, recommended } = req.body;
@@ -135,9 +137,7 @@ gameController.deleteGame = async (req, res) => {
     #swagger.summary = "Delete a game by ID"
     #swagger.description = "Deletes a game by its ID"
     #swagger.tags = ['Games']
-        #swagger.security = [{
-        "OAuth2": ["admin"]
-    }]
+    #swagger.security = [ {"OAuth2": ["admin"]}]
     */
     try {
         const gameId = req.params.id;
