# src/controllers/userscontroller.js
@@ -10,10 +10,7 @@ usersController.getAllUsers = async (req, res) => {
     #swagger.summary = "Get all users"
     #swagger.description = "Returns all users in the database"
     #swagger.tags = ['Users']
-    #swagger.security = [{
-    "OAuth2": ["read"]
-  }]
-
+    #swagger.security = [{ "OAuth2": ["read"]}]
     */
     try {
         const users = await User.find();
@@ -31,6 +28,7 @@ usersController.getUser = async (req, res) => {
     #swagger.summary = " Get a user by username"
     #swagger.description = " Get a user by username"
     #swagger.tags = ['Users']
+    #swagger.security = [{"OAuth2": ["read"] }]
     */
     try {
         const { username } = req.params;
@@ -47,15 +45,13 @@ usersController.getUser = async (req, res) => {
     }
 };
 
-// Add or update a user (with password hashing)
-usersController.addOrUpdateUser = async (req, res) => {
+// Update a user (with password hashing)
+usersController.updateUser = async (req, res) => {
         /*
-    #swagger.summary = "Add or update a user (with password hashing)"
-    #swagger.description = "Add or update a user (with password hashing)"
+    #swagger.summary = "Update a user (with password hashing)"
+    #swagger.description = "Update a user (with password hashing)"
     #swagger.tags = ['Users']
-        #swagger.security = [{
-        "OAuth2": ["write"]
-    }]
+    #swagger.security = [{"OAuth2": ["write"] }]
     */
     try {
         const { username, password, email, name } = req.body;
@@ -68,16 +64,47 @@ usersController.addOrUpdateUser = async (req, res) => {
 
         const user = await User.findOneAndUpdate(
             { username },
-            { username, password: hashedPassword },
+            { username, password: hashedPassword, email, name },
             { new: true, upsert: true }
         );
 
-        res.status(200).json({ message: "User added/updated successfully!", user });
+        res.status(200).json({ message: "User updated successfully!", user });
 
     } catch (err) {
         console.error(err);
         res.status(500).json({ error: "Internal Server Error" });
     }
+};
+
+// Add a user (with password hashing)
+usersController.addUser = async (req, res) => {
+    /*
+#swagger.summary = "Add (with password hashing)"
+#swagger.description = "Add or update a user (with password hashing)"
+#swagger.tags = ['Users']
+#swagger.security = [{"OAuth2": ["write"] }]
+*/
+try {
+    const { username, password, email, name } = req.body;
+
+    if (!username || !password || !email || !name) {
+        return res.status(400).json({ error: "All required fields must be provided." });
+    }
+
+    const hashedPassword = await bcrypt.hash(password, 10);
+
+    const user = await User.findOneAndUpdate(
+        { username },
+        { username, password: hashedPassword },
+        { new: true, upsert: true }
+    );
+
+    res.status(200).json({ message: "User added successfully!", user });
+
+} catch (err) {
+    console.error(err);
+    res.status(500).json({ error: "Internal Server Error" });
+}
 };
 
 // Delete a user by username
@@ -86,9 +113,7 @@ usersController.deleteUser = async (req, res) => {
     #swagger.summary = "Delete a user by username"
     #swagger.description = "Delete a user by username"
     #swagger.tags = ['Users']
-        #swagger.security = [{
-        "OAuth2": ["admin"]
-    }]
+    #swagger.security = [ {"OAuth2": ["admin"]}]
     */
     try {
         const { username } = req.params;
