# swagger.json
@@ -21,6 +21,10 @@
     {
       "url": "http://localhost:8080",
       "description": "Local development server"
+    },
+    {
+      "url": "https://webservices-videogamesdb-age0.onrender.com",
+      "description": "Production server"
     }
   ],
   "tags": [
@@ -65,15 +69,15 @@
           }
         ]
       },
-      "put": {
+      "post": {
         "tags": [
           "Games"
         ],
-        "summary": "Add or Update a Game",
-        "description": "Endpoint to add or update a game in the database.",
+        "summary": "Add a new game",
+        "description": "Adds a game",
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Created"
           },
           "400": {
             "description": "Bad Request"
@@ -156,7 +160,14 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "read"
+            ]
+          }
+        ]
       },
       "put": {
         "tags": [
@@ -273,7 +284,7 @@
           "Consoles"
         ],
         "summary": "Get all Consoles",
-        "description": "Endpoint to get all consoles from the database.",
+        "description": "Get all consoles from the database.",
         "responses": {
           "200": {
             "description": "OK"
@@ -290,12 +301,57 @@
           }
         ]
       },
+      "put": {
+        "tags": [
+          "Consoles"
+        ],
+        "summary": "Add or Update a Console",
+        "description": " Add or update a console in the database.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "write"
+            ]
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "console": {
+                    "example": "any"
+                  },
+                  "company": {
+                    "example": "any"
+                  },
+                  "intro": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
       "post": {
         "tags": [
           "Consoles"
         ],
         "summary": "Add or Update a Console",
-        "description": "Endpoint to add or update a console in the database.",
+        "description": " Add or update a console in the database.",
         "responses": {
           "200": {
             "description": "OK"
@@ -342,7 +398,7 @@
           "Consoles"
         ],
         "summary": "Get a Console by Name",
-        "description": "Endpoint to get a console by name from the database.",
+        "description": "get a console by name from the database.",
         "parameters": [
           {
             "name": "id",
@@ -363,14 +419,21 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "read"
+            ]
+          }
+        ]
       },
       "delete": {
         "tags": [
           "Consoles"
         ],
         "summary": "Delete a Console",
-        "description": "Endpoint to delete a console from the database.",
+        "description": "Delete a console from the database.",
         "parameters": [
           {
             "name": "id",
@@ -423,6 +486,54 @@
             ]
           }
         ]
+      },
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Add (with password hashing)",
+        "description": "Add or update a user (with password hashing)",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "write"
+            ]
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "name": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/users/{username}": {
@@ -452,14 +563,21 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "read"
+            ]
+          }
+        ]
       },
       "put": {
         "tags": [
           "Users"
         ],
-        "summary": "Add or update a user (with password hashing)",
-        "description": "Add or update a user (with password hashing)",
+        "summary": "Update a user (with password hashing)",
+        "description": "Update a user (with password hashing)",
         "parameters": [
           {
             "name": "username",
@@ -600,6 +718,54 @@
           }
         ]
       },
+      "post": {
+        "tags": [
+          "Copies"
+        ],
+        "summary": "Add or update a copy",
+        "description": "Add or update a copy",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "write"
+            ]
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "downloaded": {
+                    "example": "any"
+                  },
+                  "physical": {
+                    "example": "any"
+                  },
+                  "gameTitle": {
+                    "example": "any"
+                  },
+                  "consoles": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
       "put": {
         "tags": [
           "Copies"
@@ -676,7 +842,14 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "read"
+            ]
+          }
+        ]
       },
       "delete": {
         "tags": [
